<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BrainDiction</string>

    // functionality
    <string name="switch_mode">Dark Mode</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>

    // ui
    <string name="noaccount">Don\'t have an account?</string>
    <string name="message_welcome_page">Predict Cancer with our app BrainDiction!</string>
    <string name="title_welcome_page">Welcome to BrainDiction!</string>
    <string name="title_signup_page">Fill in your data here to register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="pekerjaan">Occupation</string>
    <string name="message_login_page">Fill in your login data here</string>
    <string name="title_login_page">Ready to connect with other people?</string>
    <string name="copyright">© 2022 BrainDiction</string>
    <string name="greetingUser">Welcome aboard %1$s,</string>
    <string name="greeting">Hi %1$s,</string>
    <string name="logout">LOGOUT</string>
    <string name="signup">Sign Up</string>

    // title

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notification</string>
    <string name="title_settings">Settings</string>

    <string name="new_prediction">New Prediction</string>
    <string name="archive">Archive</string>

    // patient
    <string name="data_pasien">Fill in new patient\'s data</string>
    <string name="rm">No RM</string>
    <string name="jenis_kelamin">Gender</string>
    <string name="tgl_lahir">Date of Birth</string>
    <string name="alamat">Address</string>
    <string name="patient_fragment_greeting">Hi %1$s,</string>
    <string name="patient_name">Patient\'s name</string>
    <string name="total_predict">Total predict</string>
    <!-- TODO: Remove or change this placeholder text -->

    // add prediction
    <string name="gallery_page">Gallery</string>
    <string name="scan">Scan</string>
    <string name="prediction">Prediction</string>
    <string name="date_birth">Enter date birth</string>
    <string name="woman">Female</string>
    <string name="man">Male</string>
    <string name="dark_mode_off">Dark Mode OFF</string>
    <string name="dark_mode_on">Dark Mode ON</string>
    <string name="language">Language</string>
    <string name="search_archive">Searching archive…</string>
    <string name="message_new_patient_succeed">Succeed adding new patient. Let\'s predict now!</string>
    <string name="go_to_detail_patient">To Patient Detail</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="predict">PREDICT X-RAY</string>

    // string array for dropdown list occupations
    <string-array name="occupation">
        <item>Oncologist</item>
        <item>Nurse</item>
        <item>Assistant Doctor</item>
    </string-array>

    //welcome
    <string name="show_on">Guide</string>
    <string name="information_text">Information about the app</string>
    <string name="or_text">or</string>
    <string name="login_text">login</string>
    <string name="information">Cancer is a leading cause of death worldwide, with an early detection cancer patient can live longer than the unpredicted one. We want to make an application to help oncologists in detecting cancer with the help of machine learning. The app flow is around the oncologist uploading patient’s information (X-rays) to the app and the app is giving out percentage rate and the output prediction.</string>
    <string name="welcompage" translatable="false">Welcome To Brain Tumor Detection</string>
    <string name="getquick">Get Quick your Accuration</string>
    <string name="guide" tools:ignore="ExtraTranslation">we will guide you with this illustration</string>
    <string name="guide2">Yeay! you\'re finished the guide, let\'s connect</string>

</resources>