<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newname"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/welcompage"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="343dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/altone_regular"
        android:text="@string/information"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/getQuick_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/getQuick_text"
        app:layout_constraintTop_toBottomOf="@+id/getQuick_text" />

    <Button
        android:id="@+id/button_gyuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/show_on"
        android:backgroundTint="@color/mouse_hover_effect"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/information_txt"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/information_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/altone_regular"
        android:text="@string/information_text"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/or_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or_text"
        app:layout_constraintEnd_toEndOf="@+id/button_gyuide"
        app:layout_constraintStart_toStartOf="@+id/button_gyuide"
        app:layout_constraintTop_toBottomOf="@+id/button_gyuide" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/mouse_hover_effect"
        android:fontFamily="@font/altone_bold"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="@+id/button_gyuide"
        app:layout_constraintStart_toStartOf="@+id/button_gyuide"
        app:layout_constraintTop_toBottomOf="@+id/button_gyuide" />

    <TextView
        android:id="@+id/getQuick_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/altone_regular"
        android:text="@string/getquick"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/welcome_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcome_txt"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>