<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patient.NewPredictionActivity">

    <TextView
        android:id="@+id/dataPasienTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/data_pasien"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/rm"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataPasienTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rmEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rmTextView">

        <com.example.braindiction.customView.RMNumber
            android:id="@+id/rmEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="text"
            android:textColor="@color/palette_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
            tools:ignore="SpeakableTextPresentCheck" />

        <RadioGroup
            android:id="@+id/setGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

        </RadioGroup>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- name -->

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/name"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rmEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView">

        <com.example.braindiction.customView.NameText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:inputType="text"
            android:textColor="@color/palette_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- jenis kelamin -->


    <!-- tanggal lahir -->
    <TextView
        android:id="@+id/jenisKelaminTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/jenis_kelamin"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />

    <!-- alamat -->

    <TextView
        android:id="@+id/tanggalLahirTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/tgl_lahir"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/alamatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/altone_bold"
        android:text="@string/alamat"
        android:textColor="@color/palette_black"
        app:layout_constraintEnd_toEndOf="@+id/textDateBirth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tanggalLahirTextView"
        app:layout_constraintTop_toBottomOf="@+id/textDateBirth" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alamatEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamatTextView">

        <com.example.braindiction.customView.AddressText
            android:id="@+id/alamatEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textLongMessage"
            android:textColor="@color/palette_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alamatEditTextLayout"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- button lanjut-->


    <!--    button pilih man or woman-->

    <com.example.braindiction.customView.ContinueButton
        android:id="@+id/continueButton"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="244dp"
        android:enabled="false"
        android:fontFamily="@font/altone_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateBirth"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="240dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/jenisKelaminTextView"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="@+id/jenisKelaminTextView"
        app:layout_constraintTop_toBottomOf="@+id/jenisKelaminTextView">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:layout_marginStart="28dp"
            android:checked="true"
            android:text="@string/man"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jenisKelaminTextView" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:checked="true"
            android:text="@string/woman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/jenisKelaminTextView" />
    </RadioGroup>

    <EditText
        android:id="@+id/textDateBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:importantForAutofill="no"
        android:text="@string/date_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tanggalLahirTextView"
        app:layout_constraintTop_toBottomOf="@+id/tanggalLahirTextView"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>