<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.GuideActivity">

    <ScrollView
        android:id="@+id/scrollIndicatorDown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide"
                android:fontFamily="@font/altone_bold"
                android:textColor="?android:attr/textColorPrimary"
                android:gravity="center"
                android:textSize="25sp"
                android:paddingTop="20dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/guidepic1"
                android:paddingBottom="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:paddingBottom="20dp"
                android:src="@drawable/guidepic12"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/guidepic13"
                android:paddingBottom="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/guidepic14"
                android:paddingBottom="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/guidepic15"
                android:paddingBottom="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:src="@drawable/guidepic16"
                android:paddingBottom="20dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/altone_regular"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/guide2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/mouse_hover_effect"
                android:text="@string/login_text" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>